JDK25, Spring Boot:4.0.3, Spring Framework: 7.0.5 현행화 중
- ope.commons.spring.jdbc.exceptions: 완료